<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180dp"
    android:layout_height="260dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewItem"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgItem2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:src="@drawable/tiger_sugar" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/nameItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewItem" />

        <ImageView
            android:id="@+id/iconRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/rating"
            android:textColor="#C8000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iconRate"
            app:layout_constraintStart_toEndOf="@id/iconRate"
            app:layout_constraintTop_toTopOf="@id/iconRate" />

        <TextView
            android:id="@+id/tvDistanceAndTime"
            android:textColor="#DA000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.14km . 20 min"
            app:layout_constraintBottom_toTopOf="@id/nameItem"
            app:layout_constraintStart_toStartOf="@id/iconRate"
            app:layout_constraintTop_toBottomOf="@id/cardViewItem"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>