<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="4dp"
    android:background="@color/white"
    tools:context=".fragment.HomeFragment">

    <include
        android:id="@+id/searchView1"
        layout="@layout/search_view"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/layoutSlide"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:layout_constraintTop_toTopOf="parent">

                <me.relex.circleindicator.CircleIndicator3
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true"
                    android:padding="20dp"
                    app:ci_drawable="@drawable/circle_slide"
                    app:ci_gravity="center_vertical" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/indicator"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/promoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layoutSlide">
                <include layout="@layout/promo" />
            </RelativeLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:background="#1E000000"
                app:layout_constraintTop_toBottomOf="@id/promoLayout" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/view1"
                app:spanCount="2"
                tools:listitem="@layout/item_recyclerview1" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginEnd="12dp"
                android:id="@+id/seeAll"
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/see_all_btn"
                android:text="@string/see_all"
                android:textAllCaps="false"
                android:textColor="#229728"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerView1" />

            <TextView
                android:id="@+id/titleSnack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingStart="12dp"
                android:paddingEnd="10dp"
                android:text="Tasty snack - gofood đêêê"
                android:textAllCaps="true"
                android:textColor="#EE000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/seeAll"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/seeAll" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingStart="12dp"
                android:text="Go Food Hn"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/titleSnack"
                app:layout_constraintTop_toBottomOf="@id/titleSnack" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/seeAll"
                tools:listitem="@layout/item_recyclerview2" />

            <TextView
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingStart="12dp"
                android:textSize="18sp"
                android:id="@+id/tvRecommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/recyclerView2"
                android:text="@string/tvRecommend"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvRecommend"
                android:layout_marginTop="4dp"
                android:paddingStart="12dp"
                android:textSize="16sp"
                android:id="@+id/tvTry"
                android:text="@string/try_these_and_thank_us_latter"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvTry"
                android:layout_marginTop="12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:id="@+id/recyclerViewRecommend"
                tools:listitem="@layout/item_recommend"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

